# worldCupResults

./: .gitignore  README.md  fifa_api.py  main.py  pyproject.toml  template.html
.github/workflows/: deploy.yml
