[project]
name = "worldcupresults"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "jinja2>=3.1.6",
    "pandas>=3.0.3",
    "py-utils",
]

[tool.uv.sources]
py-utils = { git = "https://github.com/correalramos24/py_utils.git" }
